# exact-reader

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic.rs  multifile.rs
src/: lib.rs  multifile.rs  multifile_reader.rs  reader.rs  utils.rs
src/vec_deq/: mod.rs  raw_vec.rs  unique.rs  utils.rs
