[package]
name = "exact-reader"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "I/O buffering crate, supporting reservation-based reads and virtually-concatenated file handling."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[examples]]
name = "basic"

[[examples]]
name = "multifile"